@@ -14,6 +14,7 @@
 
 	var subject = '<?php echo $subject?>';
 	var ajax_list_info_url = '<?php echo $ajax_list_info_url?>';
+	var unique_hash = '<?php echo $unique_hash; ?>';
 </script>
 <div id='report-error' class='report-div error'></div>
 <div id='report-success' class='report-div success'></div>	
